primeiro commit do HTML

--- a/pages/cultura.html
+++ b/pages/cultura.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cultura da índia</title>
+    <link rel="stylesheet" href="cultura.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mali&family=Rakkas&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Mali&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rakkas&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <div>
+            <a href="../index.html">
+                <img class="logo" src="../assets/logo.png" alt="Logo do Índia Vibrante">
+            </a>
+        </div>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="../index.html">Home</a>
+                </li>
+                <li>
+                    <a href="./historia.html">História</a>
+                </li>
+                <li>
+                    <a class="active" href="./cultura.html">Cultura</a>
+                </li>
+                <li>
+                    <a href="./pontos-turisticos.html">Pontos Turísticos</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>A Cultura Indiana</h1>
+
+        <p class="p1">A cultura da Índia é diversa e milenar.
+            Religiões como o hinduísmo, budismo e islamismo são predominantes.
+            Festivais coloridos, como Diwali e Holi, celebram a espiritualidade e a vida.
+            A música clássica indiana e as danças tradicionais, como o Bharatanatyam, são pilares culturais..
+        </p>
+        <p class="p2">
+            Na cultura indiana, certos animais são sagrados, especialmente na tradição hindu.
+            A vaca simboliza fertilidade e maternidade, sendo protegida e considerada sagrada.
+            O macaco, associado ao deus Hanuman, e o elefante, ligado a Ganesha, o deus da prosperidade, também são
+            venerados.
+            Essas crenças refletem uma forte conexão espiritual com a natureza.
+        </p>
 </body>
+
 </html>
