--- a/pages/historia.html
+++ b/pages/historia.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="historia.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mali&family=Rakkas&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mali&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rakkas&display=swap" rel="stylesheet">
     <title>História da Índia</title>
 </head>
 
@@ -15,6 +24,7 @@
                 <img class="logo" src="../assets/logo.png" alt="Logo do Índia Vibrante">
             </a>
         </div>
+        <div><h1>Índia Vibrante</h1></div>
 
         <nav>
             <ul>
@@ -22,7 +32,7 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="./pages/historia.html">História</a>
+                    <a class="active" href="./pages/historia.html">História</a>
                 </li>
 
                 <li>
@@ -38,7 +48,7 @@
 
     <main>
         <h1>Uma Jornada de Milênios</h1>
-        <h2>A história da Índia pode ser dividida em três partes:</h2>
+        <h2>A <strong class="historia">história</strong> da Índia pode ser dividida em três partes:</h2>
 
         <p class="p1"> <strong>Antiguidade e Impérios Clássicos:</strong>
             <br>
@@ -54,7 +64,7 @@
         </p>
 
         <p class="p3"> 
-            <strong>Domínio Islâmico e Império Mughal:</strong>
+            <strong >Domínio Islâmico e Império Mughal:</strong>
             <br>
             A partir do século XI, dinastias islâmicas chegaram à Índia. No século XVI, os Mughals prosperaram
             culturalmente, destacando-se com o Taj Mahal e uma economia forte.
