quinto commit? nn sei

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-        <h1>Uma Jornada de Milênios</h1>
+        <h1 class="h1">Uma Jornada de Milênios</h1>
         <h2>A <strong class="historia">história</strong> da Índia pode ser dividida em três partes:</h2>
 
         <p class="p1"> <strong>Antiguidade e Impérios Clássicos:</strong>
